# lumoza

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
docs/: PRODUCT_FOUNDATION.md  architecture.md  phase-1-plan.md  phase-2-plan.md  phase-3-plan.md  phase-4-plan.md  phase-5-plan.md  phase-5-ui-validation.md  roadmap.md  ui-system.md
python-engine/: healthcheck.py  main.py  requirements.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_init.sql  0002_analysis.sql  0003_ranking.sql  0004_curation_confidence.sql  0005_people.sql  0006_smart_selection.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: analysis.rs  app.rs  mod.rs  project.rs  scan.rs  system.rs
src-tauri/src/services/: database.rs  mod.rs  people_analyzer.rs  project_registry.rs  quality_analyzer.rs  scan_indexer.rs  smart_selector.rs  thumbnail_pipeline.rs
src-tauri/src/setup/: bootstrap.rs
src-tauri/src/state/: app_state.rs
src-tauri/src/windows/: main_window.rs
src/app/: App.tsx
src/components/layout/: AppShell.tsx
src/components/photo-grid/: ProjectPhotoGrid.tsx  (+1 more)
src/pages/: CreateProject.tsx  OperationsPage.tsx  PhotosPage.tsx  ProjectDashboard.tsx  ProjectWorkspace.tsx  SettingsPage.tsx  StudioPage.tsx
src/services/: analysisService.ts  photoService.ts  projectService.ts  scanService.ts  systemStatusService.ts  tauriCommands.ts  thumbnailService.ts
src/stores/: appStore.ts  projectStore.ts  scanStore.ts  settingsStore.ts
src/styles/: globals.css  theme.css
src/types/: app.ts  project.ts  system.ts
(+14 files in other folders)
