[package]
name = "lumoza_studio"
version = "0.1.0"
description = "Lumoza Studio desktop foundation"
authors = ["mithun"]
edition = "2021"

[lib]
name = "lumoza_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "1"
uuid = { version = "1", features = ["serde", "v4"] }
